
2016-04-23  Brian Tiffin <btiffin@gnu.org>

	* typeck.c: 64bit unsigned treated as signed when long int
	  same size as long long.
	* tree.h: realign some tabs.
	* codegen.c, error.c, pplex.l, scanner.l, tree.c, typeck.c: remove printf
	  non literal spec warning.


2016-04-23  Brian Tiffin <btiffin@gnu.org>

	* codeoptim.c: Bug #229: binary-double unsigned compares failed when high
	  bit set.

2016-04-17  Edward Hart <edward.dan.hart@gmail.com>

	* parser.y (screen_description): fixed bug #227: code now handles case
	  where no screen precedes a 78-level item.
	* parser.y (undefined_word): Added error case to improve error handling.
	  This required a slight change to file_control_entry.
	* ppparse.y: Fixed name-prefix directive warning.

2016-04-15  Edward Hart <edward.dan.hart@gmail.com>

	* parser.y: fixed bug #224: disallow configuration section elements in
	  any order.
	* scanner.l, parser.y: moved handling of IDENTIFICATION DIVISION header
	  to parser.y.
	* parser.y: disallow functions without END FUNCTION.
	* parser.y: allow nested programs to omit END PROGRAM, per standard.
	* parser.y: emit error if nested programs are defined in a program
	  without a PROCEDURE DIVISION header.
	* parser.y: refactored grammar of source_element and program_body.
	* parser.y: renamed all optional tokens to be begin with underscore for
	  consistency.

2016-03-29  Edward Hart <edward.dan.hart@gmail.com>

	* codegen.c (find_func_ext_name): moved missing prototype/function check
	  to tree.c, to be done when REPOSITORY entry is given.
	* tree.h (cb_func_prototype): removed now redundant check_needed flag.
	* warning.def: added prototype warning flag for above.
	* parser.y, tree.h, typeck.c: added SET LAST EXCEPTION TO OFF.

2016-03-27  Edward Hart <edward.dan.hart@gmail.com>

	* codegen.c (find_func_ext_name), tree.h: corrected AS clause of
	  REPOSITORY FUNCTION phrase: actually gives function (prototype)